--- a/src/test/resources/org.omnifaces.test.component.hashparam/HashParamIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.hashparam/HashParamIT.xhtml
@@ -36,7 +36,7 @@
     	<o:form id="form">
     		<h:inputText id="foo" value="#{hashParamITBean.foo}" />
     		<h:inputText id="bar" value="#{hashParamITBean.bar}" />
-    		<h:commandButton id="submit">
+    		<h:commandButton id="submit" value="submit">
     			<f:ajax execute="@form" />
     		</h:commandButton>
     	</o:form>
