--- a/src/test/resources/org.omnifaces.test.facesviews.extensionlessurls/excludedfolder/FacesViewsITOtherPageInExcludedFolder.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.extensionlessurls/excludedfolder/FacesViewsITOtherPageInExcludedFolder.xhtml
@@ -26,11 +26,11 @@
 	</h:head>
 
 	<h:body>
-		<h:link id="linkWithExtensionOutcome" outcome="/excludedfolder/FacesViewsITOtherPageInExcludedFolder.xhtml" />
-		<h:link id="linkWithExtensionlessOutcome" outcome="/excludedfolder/FacesViewsITOtherPageInExcludedFolder" />
+		<h:link id="linkWithExtensionOutcome" value="linkWithExtensionOutcome" outcome="/excludedfolder/FacesViewsITOtherPageInExcludedFolder.xhtml" />
+		<h:link id="linkWithExtensionlessOutcome" value="linkWithExtensionlessOutcome" outcome="/excludedfolder/FacesViewsITOtherPageInExcludedFolder" />
 
 		<o:form id="form">
-			<h:commandButton id="submit" />
+			<h:commandButton id="submit" value="submit" />
 		</o:form>
 	</h:body>
 </html>
