--- a/src/test/resources/org.omnifaces.test.facesviews.lowercasedrequesturi/alreadylowercasedviewid.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.lowercasedrequesturi/alreadylowercasedviewid.xhtml
@@ -26,13 +26,13 @@
 	</h:head>
 
 	<h:body>
-		<h:link id="linkWithExtensionOutcome" outcome="alreadylowercasedviewid.xhtml" />
-		<h:link id="linkWithExtensionlessOutcome" outcome="alreadylowercasedviewid" />
-		<h:link id="lowercasedLinkWithExtensionOutcome" outcome="alreadylowercasedviewid.xhtml" />
-		<h:link id="lowercasedLinkWithExtensionlessOutcome" outcome="alreadylowercasedviewid" />
+		<h:link id="linkWithExtensionOutcome" value="linkWithExtensionOutcome" outcome="alreadylowercasedviewid.xhtml" />
+		<h:link id="linkWithExtensionlessOutcome" value="linkWithExtensionlessOutcome" outcome="alreadylowercasedviewid" />
+		<h:link id="lowercasedLinkWithExtensionOutcome" value="lowercasedLinkWithExtensionOutcome" outcome="alreadylowercasedviewid.xhtml" />
+		<h:link id="lowercasedLinkWithExtensionlessOutcome" value="lowercasedLinkWithExtensionlessOutcome" outcome="alreadylowercasedviewid" />
 
 		<o:form id="form">
-			<h:commandButton id="submit" />
+			<h:commandButton id="submit" value="submit" />
 		</o:form>
 	</h:body>
 </html>
