--- a/src/test/resources/org.omnifaces.test.facesviews.multiviews/excludedfolder/MultiViewsITOtherPageInExcludedFolder.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.multiviews/excludedfolder/MultiViewsITOtherPageInExcludedFolder.xhtml
@@ -30,10 +30,10 @@
 		<div id="secondPathParamAsInteger">#{multiViewsITBean.secondPathParamAsInteger}</div>
 
 		<o:form id="form">
-			<h:commandButton id="submit" />
+			<h:commandButton id="submit" value="submit" />
 		</o:form>
 
-		<h:link id="link" outcome="/MultiViewsITOtherPage">
+		<h:link id="link" value="link" outcome="/MultiViewsITOtherPage">
 			<o:pathParam value="pathParam" />
 			<o:pathParam value="471" />
 		</h:link>
