--- a/src/test/resources/org.omnifaces.test.cdi.viewscoped.viewstate/ViewScopedViewStateIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.cdi.viewscoped.viewstate/ViewScopedViewStateIT.xhtml
@@ -29,18 +29,18 @@
 			<h:messages id="messages" globalOnly="true" />
 		</h:panelGroup>
 
-		<h:button id="unload" />
-		<h:link id="newtab" target="_blank" />
+		<h:button id="unload" value="unload" />
+		<h:link id="newtab" value="newtab" target="_blank" />
 
 		<o:form id="non-ajax">
-			<h:commandButton id="submit" action="#{viewScopedViewStateITBean.submit}" />
-			<h:commandLink id="navigate" action="#{viewScopedViewStateITBean.navigate}" />
+			<h:commandButton id="submit" value="submit" action="#{viewScopedViewStateITBean.submit}" />
+			<h:commandLink id="navigate" value="navigate" action="#{viewScopedViewStateITBean.navigate}" />
 		</o:form>
 
 		<o:form id="ajax">
 			<f:ajax render=":results">
-				<h:commandButton id="submit" action="#{viewScopedViewStateITBean.submit}" />
-				<h:commandLink id="navigate" action="#{viewScopedViewStateITBean.navigate}" />
+				<h:commandButton id="submit" value="submit" action="#{viewScopedViewStateITBean.submit}" />
+				<h:commandLink id="navigate" value="navigate" action="#{viewScopedViewStateITBean.navigate}" />
 			</f:ajax>
 		</o:form>
 	</h:body>
