--- a/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
@@ -29,12 +29,12 @@
 
 		<o:form id="uploadSingle" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" />
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadSingle}" />
 		</o:form>
 
 		<o:form id="uploadSingleAjax" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" />
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}">
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadSingle}">
 				<f:ajax execute="@form" render=":messages" />
 			</h:commandButton>
 		</o:form>
@@ -42,41 +42,41 @@
 		<o:form id="uploadSingleAcceptAnyImage" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" label="label" 
 				accept="image/*" acceptMessage="{0}: {1} is not {2}" />
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadSingle}" />
 		</o:form>
 
 		<o:form id="uploadSingleAcceptSvgImage" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" label="label" 
 				accept="image/svg+xml" acceptMessage="{0}: {1} is not {2}" />
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadSingle}" />
 		</o:form>
 
 		<o:form id="uploadSingleMaxsizeClient" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" label="label" 
 				maxsize="10" maxsizeMessage="{0}: {1} larger than {2}" />
 			<h:message id="message" for="@previous" />
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingleAndAddLocalMessage}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadSingleAndAddLocalMessage}" />
 		</o:form>
 
 		<o:form id="uploadSingleMaxsizeServer" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" label="label" 
 				maxsize="#{facesContext.currentPhaseId.ordinal ne 6 ? 10 : null}" maxsizeMessage="{0}: {1} larger than {2}" />
 				<!-- Above maxsize value should skip client side validation. -->
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadSingle}" />
 		</o:form>
 
 		<o:form id="uploadMultiple" enctype="multipart/form-data">
 			<o:inputFile id="file1" value="#{inputFileITBean.files}" multiple="true" />
 			<o:inputFile id="file2" a:name="uploadMultiple:file1" rendered="#{facesContext.currentPhaseId.ordinal eq 6}" />
 			<!-- Above additional input is a work around for Selenium WebDriver API not supporting multi file upload. -->
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadMultiple}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadMultiple}" />
 		</o:form>
 
 		<o:form id="uploadMultipleAjax" enctype="multipart/form-data">
 			<o:inputFile id="file1" value="#{inputFileITBean.files}" multiple="true" />
 			<o:inputFile id="file2" a:name="uploadMultipleAjax:file1" rendered="#{facesContext.currentPhaseId.ordinal eq 6}" />
 			<!-- Above additional input is a work around for Selenium WebDriver API not supporting multi file upload. -->
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadMultiple}">
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadMultiple}">
 				<f:ajax execute="@form" render=":messages" />
 			</h:commandButton>
 		</o:form>
@@ -87,7 +87,7 @@
 			<h:message id="message" for="@previous" />
 			<o:inputFile id="file2" a:name="uploadMultipleMaxsizeClient:file1" rendered="#{facesContext.currentPhaseId.ordinal eq 6}" />
 			<!-- Above additional input is a work around for Selenium WebDriver API not supporting multi file upload. -->
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadMultiple}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadMultiple}" />
 		</o:form>
 
 		<o:form id="uploadMultipleMaxsizeServer" enctype="multipart/form-data">
@@ -96,7 +96,7 @@
 				<!-- Above maxsize value should skip client side validation, so we can test server side validation. -->
 			<o:inputFile id="file2" a:name="uploadMultipleMaxsizeServer:file1" rendered="#{facesContext.currentPhaseId.ordinal eq 6}" />
 			<!-- Above additional input is a work around for Selenium WebDriver API not supporting multi file upload. -->
-			<h:commandButton id="submit" action="#{inputFileITBean.uploadMultiple}" />
+			<h:commandButton id="submit" value="submit" action="#{inputFileITBean.uploadMultiple}" />
 		</o:form>
 	</h:body>
 </html>
