--- a/src/test/resources/org.omnifaces.test.facesviews.extensionlessurls/folder.with.period/FacesViewsITOtherPageInFolderWithPeriod.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.extensionlessurls/folder.with.period/FacesViewsITOtherPageInFolderWithPeriod.xhtml
@@ -26,11 +26,11 @@
 	</h:head>
 
 	<h:body>
-		<h:link id="linkWithExtensionOutcome" outcome="/folder.with.period/FacesViewsITOtherPageInFolderWithPeriod.xhtml" />
-		<h:link id="linkWithExtensionlessOutcome" outcome="/folder.with.period/FacesViewsITOtherPageInFolderWithPeriod" />
+		<h:link id="linkWithExtensionOutcome" value="linkWithExtensionOutcome" outcome="/folder.with.period/FacesViewsITOtherPageInFolderWithPeriod.xhtml" />
+		<h:link id="linkWithExtensionlessOutcome" value="linkWithExtensionlessOutcome" outcome="/folder.with.period/FacesViewsITOtherPageInFolderWithPeriod" />
 
 		<h:form id="form">
-			<h:commandButton id="submit" />
+			<h:commandButton id="submit" value="submit" />
 		</h:form>
 	</h:body>
 </html>
