--- a/src/test/resources/org.omnifaces.test.util.components/ComponentsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.util.components/ComponentsIT.xhtml
@@ -26,11 +26,11 @@
 
 	<h:body>
 		<h:form id="form">
-			<h:commandButton id="commandButtonAction" action="#{componentsITBean.submit}"><f:ajax render=":expressions" /></h:commandButton>
-			<h:commandButton id="commandButtonActionListener" actionListener="#{componentsITBean.submit()}"><f:ajax render=":expressions" /></h:commandButton>
-			<h:commandButton id="commandButtonAjaxListener" value="f:ajax"><f:ajax listener="#{componentsITBean.submit()}" render=":expressions" /></h:commandButton>
-			<p:commandButton id="primeFacesCommandButtonAction" action="#{componentsITBean.submit}" update=":expressions" />
-			<p:commandButton id="primeFacesCommandButtonActionListener" actionListener="#{componentsITBean.submit()}" update=":expressions" />
+			<h:commandButton id="commandButtonAction" value="commandButtonAction" action="#{componentsITBean.submit}"><f:ajax render=":expressions" /></h:commandButton>
+			<h:commandButton id="commandButtonActionListener" value="commandButtonActionListener" actionListener="#{componentsITBean.submit()}"><f:ajax render=":expressions" /></h:commandButton>
+			<h:commandButton id="commandButtonAjaxListener" value="commandButtonAjaxListener"><f:ajax listener="#{componentsITBean.submit()}" render=":expressions" /></h:commandButton>
+			<p:commandButton id="primeFacesCommandButtonAction" value="primeFacesCommandButtonAction" action="#{componentsITBean.submit}" update=":expressions" />
+			<p:commandButton id="primeFacesCommandButtonActionListener" value="primeFacesCommandButtonActionListener" actionListener="#{componentsITBean.submit()}" update=":expressions" />
 		</h:form>
 		<h:outputText id="expressions" value="#{componentsITBean.expressions}" />
 	</h:body>
