Fix #736: use the new webmanifest extension and content type

--- a/src/test/resources/org.omnifaces.test.resourcehandler.pwaresourcehandler/PWAResourceHandlerIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.resourcehandler.pwaresourcehandler/PWAResourceHandlerIT.xhtml
@@ -22,7 +22,7 @@
 	xmlns:of="http://omnifaces.org/functions"
 >
 	<h:head>
-		<link rel="manifest" href="#{resource['omnifaces:manifest.json']}" crossorigin="use-credentials" />
+		<link rel="manifest" href="#{resource['omnifaces:manifest.webmanifest']}" crossorigin="use-credentials" />
 	</h:head>
 	<h:body>
 		<o:form id="form">
