Fix #754: deep-nested variable mapper should also be cleared out

--- a/src/test/resources/org.omnifaces.test.taghandler.tagattribute/TagAttributeIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.tagattribute/TagAttributeIT.xhtml
@@ -20,9 +20,11 @@
 	xmlns:t="tags"
 >
 	<h:head />
-	
+
 	<h:body>
-		<div id="first"><t:test /></div>
-		<div id="second"><t:test /></div>
+		<h:form>
+			<div id="first"><t:test /></div>
+			<div id="second"><t:test styleClass="fubar" /></div>
+		</h:form>
 	</h:body>
 </html>
