--- a/src/test/resources/org.omnifaces.test.taghandler.validatebean/ValidateBeanIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.validatebean/ValidateBeanIT.xhtml
@@ -14,11 +14,10 @@
 -->
 <!DOCTYPE html>
 <html lang="en"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:cc="http://xmlns.jcp.org/jsf/composite/components"
+    xmlns:f="jakarta.faces.core"
+    xmlns:h="jakarta.faces.html"
+    xmlns:h="jakarta.faces.facelets"
+    xmlns:cc="jakarta.faces.composite/components"
     xmlns:o="http://omnifaces.org/ui"
     xmlns:of="http://omnifaces.org/functions"
 >
