--- a/src/test/resources/org.omnifaces.test.taghandler.tagattribute/TagAttributeIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.tagattribute/TagAttributeIT.xhtml
@@ -14,9 +14,8 @@
 -->
 <!DOCTYPE html>
 <html lang="en"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:h="jakarta.faces.html"
+    xmlns:h="jakarta.faces.facelets"
     xmlns:t="tags"
 >
     <h:head />
