--- a/src/test/resources/org.omnifaces.test.util.components/ComponentsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.util.components/ComponentsIT.xhtml
@@ -14,10 +14,9 @@
 -->
 <!DOCTYPE html>
 <html lang="en"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:f="jakarta.faces.core"
+    xmlns:h="jakarta.faces.html"
+    xmlns:h="jakarta.faces.facelets"
     xmlns:o="http://omnifaces.org/ui"
     xmlns:of="http://omnifaces.org/functions"
     xmlns:p="http://primefaces.org/ui"
