--- a/src/test/resources/org.omnifaces.test.validator.validatemultiplefields/ValidateUniqueIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.validator.validatemultiplefields/ValidateUniqueIT.xhtml
@@ -14,11 +14,10 @@
 -->
 <!DOCTYPE html>
 <html lang="en"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+    xmlns:f="jakarta.faces.core"
+    xmlns:h="jakarta.faces.html"
+    xmlns:h="jakarta.faces.facelets"
+    xmlns:c="jakarta.tags.core"
     xmlns:o="http://omnifaces.org/ui"
 >
     <h:head />
