--- a/src/test/resources/org.omnifaces.test.viewhandler/NestedDialogForm.xhtml
+++ b/src/test/resources/org.omnifaces.test.viewhandler/NestedDialogForm.xhtml
@@ -14,8 +14,7 @@
 -->
 <!DOCTYPE html>
 <html lang="en"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:h="jakarta.faces.html"
     xmlns:o="http://omnifaces.org/ui"
     xmlns:p="http://primefaces.org/ui"
 >
