Fix #818: catch up new OmniFaces XML namespaces

--- a/src/test/resources/org.omnifaces.test.facesviews.lowercasedrequesturi/alreadylowercasedviewid.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.lowercasedrequesturi/alreadylowercasedviewid.xhtml
@@ -17,8 +17,8 @@
     xmlns:f="jakarta.faces.core"
     xmlns:h="jakarta.faces.html"
     xmlns:h="jakarta.faces.facelets"
-    xmlns:o="http://omnifaces.org/ui"
-    xmlns:of="http://omnifaces.org/functions"
+    xmlns:o="omnifaces.ui"
+    xmlns:of="omnifaces.functions"
 >
     <h:head>
         <title>AlreadyLowercasedViewId</title>
