--- a/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
@@ -18,8 +18,8 @@
     xmlns:h="jakarta.faces.html"
     xmlns:h="jakarta.faces.facelets"
     xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-    xmlns:o="http://omnifaces.org/ui"
-    xmlns:of="http://omnifaces.org/functions"
+    xmlns:o="omnifaces.ui"
+    xmlns:of="omnifaces.functions"
 >
     <h:head />
 
