--- a/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
@@ -17,7 +17,7 @@
     xmlns:f="jakarta.faces.core"
     xmlns:h="jakarta.faces.html"
     xmlns:h="jakarta.faces.facelets"
-    xmlns:o="http://omnifaces.org/ui"
+    xmlns:o="omnifaces.ui"
 >
     <h:head />
     
