--- a/src/test/resources/org.omnifaces.test.validator.validatemultiplefields/ValidateAllIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.validator.validatemultiplefields/ValidateAllIT.xhtml
@@ -18,7 +18,7 @@
     xmlns:h="jakarta.faces.html"
     xmlns:h="jakarta.faces.facelets"
     xmlns:c="jakarta.tags.core"
-    xmlns:o="http://omnifaces.org/ui"
+    xmlns:o="omnifaces.ui"
 >
     <h:head />
     
