--- a/src/test/resources/org.omnifaces.test.viewhandler/NestedDialogForm.xhtml
+++ b/src/test/resources/org.omnifaces.test.viewhandler/NestedDialogForm.xhtml
@@ -15,7 +15,7 @@
 <!DOCTYPE html>
 <html lang="en"
     xmlns:h="jakarta.faces.html"
-    xmlns:o="http://omnifaces.org/ui"
+    xmlns:o="omnifaces.ui"
     xmlns:p="http://primefaces.org/ui"
 >
     <h:head>
