--- a/src/test/resources/org.omnifaces.test.component.inputhidden/InputHiddenIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.inputhidden/InputHiddenIT.xhtml
@@ -17,7 +17,7 @@
     xmlns:f="jakarta.faces.core"
     xmlns:h="jakarta.faces.html"
     xmlns:h="jakarta.faces.facelets"
-    xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+    xmlns:a="jakarta.faces.passthrough"
     xmlns:o="omnifaces.ui"
     xmlns:of="omnifaces.functions"
 >
