fix find'n'replace mistake on Facelets XML namespace

--- a/src/test/resources/org.omnifaces.test.taghandler.tagattribute/TagAttributeIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.tagattribute/TagAttributeIT.xhtml
@@ -15,7 +15,7 @@
 <!DOCTYPE html>
 <html lang="en"
     xmlns:h="jakarta.faces.html"
-    xmlns:h="jakarta.faces.facelets"
+    xmlns:ui="jakarta.faces.facelets"
     xmlns:t="tags"
 >
     <h:head />
