--- a/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
@@ -16,7 +16,7 @@
 <html lang="en"
     xmlns:f="jakarta.faces.core"
     xmlns:h="jakarta.faces.html"
-    xmlns:h="jakarta.faces.facelets"
+    xmlns:ui="jakarta.faces.facelets"
     xmlns:a="jakarta.faces.passthrough"
     xmlns:o="omnifaces.ui"
     xmlns:of="omnifaces.functions"
