--- a/src/test/resources/org.omnifaces.test.util.components/ComponentsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.util.components/ComponentsIT.xhtml
@@ -16,7 +16,7 @@
 <html lang="en"
     xmlns:f="jakarta.faces.core"
     xmlns:h="jakarta.faces.html"
-    xmlns:h="jakarta.faces.facelets"
+    xmlns:ui="jakarta.faces.facelets"
     xmlns:o="omnifaces.ui"
     xmlns:of="omnifaces.functions"
     xmlns:p="http://primefaces.org/ui"
