--- a/src/test/resources/org.omnifaces.test.validator.validatemultiplefields/ValidateAllIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.validator.validatemultiplefields/ValidateAllIT.xhtml
@@ -16,7 +16,7 @@
 <html lang="en"
     xmlns:f="jakarta.faces.core"
     xmlns:h="jakarta.faces.html"
-    xmlns:h="jakarta.faces.facelets"
+    xmlns:ui="jakarta.faces.facelets"
     xmlns:c="jakarta.tags.core"
     xmlns:o="omnifaces.ui"
 >
