fix failing CombinedResourceHandlerIT since removal of JSF 3.0 support

--- a/src/test/resources/org.omnifaces.test.resourcehandler.combinedresourcehandler/CombinedResourceHandlerIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.resourcehandler.combinedresourcehandler/CombinedResourceHandlerIT.xhtml
@@ -22,7 +22,7 @@
 >
     <h:head>
         <h:outputScript>var i = 0;</h:outputScript>
-        <h:outputScript library="jakarta.faces" name="#{combinedResourceHandlerITBean.facesJsAvailable ? 'faces.js' : 'jsf.js'}" target="head" />
+        <h:outputScript library="jakarta.faces" name="faces.js" target="head" />
         <h:outputScript library="omnifaces" name="omnifaces.js" target="head" />
         <h:outputScript name="headWithTarget.js" target="head" />
         <h:outputScript name="headWithoutTarget.js" />
