--- a/src/test/resources/org.omnifaces.test.cdi.param/ParamIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.cdi.param/ParamIT.xhtml
@@ -42,5 +42,7 @@
         <h:outputText id="entityViewParam" value="#{paramITBean.entityViewParam}" />
         <h:outputText id="initResult" value="#{paramITBean.initResult}" />
         <h:messages id="messages" />
+        <h:messages id="viewRootMessages" for="#{view.id}" />
+        <h:messages id="globalMessages" globalOnly="true" />
     </h:body>
 </html>
