IT 864: cover members() by integration test

--- a/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
@@ -33,5 +33,6 @@
         <h:outputText id="enumValues" value="#{ImportConstantsITEnum.values()}" />
         <o:importConstants type="org.omnifaces.test.taghandler.importconstants.ImportConstantsITEnumImplementingInterface" />
         <h:outputText id="enumInterfaceValues" value="#{ImportConstantsITEnumImplementingInterface.values()}" />
+        <h:outputText id="enumInterfaceMembers" value="#{ImportConstantsITEnumImplementingInterface.members()}" />
     </h:body>
 </html>
